# databricks-common

./: .gitignore  LICENSE  README.md  databricks-connect.md  dbutils.md  ide.md  lineage-api.py  pyproject.toml  python.md
.github/workflows/: libs.yml  python.yml
cli/: current.sh  lineage.sh  setup.ps1  setup.sh  user.sh
cli/secrets/: scope.sh  secret.sh
cli/unity-catalog/: allow.sh  uc.sh  volume.sh
cli/user/: group.sh  service-principal.sh
common/: __init__.py
docs/: notebook.md  pat.md
docs/community/: fe.md  marketplace.md
docs/compute/: all-purpose.md  job.md  (+2 more)
federation/: README.md
genie/: API.md  README.md
lib/: context.py  lineage.py  workspace.py
lineage/: Table.sql  __init__.py  sql.py  table.py
notebook/: README.md  context.ipynb  context.py  python.md
playground/: README.md
py/: README.md  databricks-connect.md  pyproject.toml
py/connect/: __init__.py
py/davidkhala/databricks/: __init__.py  dbutils.py  local.py
py/davidkhala/databricks/connect/: __init__.py  notebook.py
py/davidkhala/databricks/datasets/: __init__.py
py/davidkhala/databricks/datasets/COVID/: CORD_19.py  __init__.py  covid_19_data.py
py/davidkhala/databricks/datasets/COVID/covid-19-data/: __init__.py
py/davidkhala/databricks/datasets/data_gov/: farmers_markets_geographic.py
py/davidkhala/databricks/gcp/: pubsub.py
py/davidkhala/databricks/lineage/: sql.py
py/davidkhala/databricks/sink/stream/: __init__.py
py/davidkhala/databricks/workspace/: __init__.py  app.py  catalog.py  job.py  path.py  server.py  table.py  types.py  volume.py  warehouse.py
py/lineage/: rest.py  sql.py
py/notebook/: connect.py  context.ipynb  util.py
py/notebook/runtime/: __init__.py  servermore.py
py/notebook/sink/: sqlserver.py
py/notebook/source/azure_open_datasets/: context.py  index.py  nyctlc.py
py/notebook/source/pubsub/: README.md  stream.py
py/test/: common_test.py  connect_test.py  dev_test.py  lineage_test.py  workspace_test.py
py/test/self/: pyproject.toml  test.py
py/tests/: dbutils_test.py  gcp_test.py  integration.py  integration_test.py  servermore.py  servermore_test.py  spark_test.py  stream.py  test_connect.py  test_free.py  test_gcp.py  test_servermore.py  test_spark.py  test_workspace.py  workspace_test.py
py/tests/integration/: manual.py  test_sample.py
py/tests/self/: manual_test.py  pyproject.toml  test.py
py/workspace/: __init__.py  catalog.py  path.py
sink/: sqlserver.py
spark/: __init__.py
sql/: README.md  syntax.md
test/: common_test.py  connect_test.py  dev_test.py  lineage_test.py  spark_test.py  workspace_test.py
workspace/: __init__.py  catalog.py  path.py  query.py  table.py  warehouse.py
(+28 files in other folders)
