[tool.poetry]
name = "davidkhala.databricks"
version = "0.0.0"
description = ""
authors = ["David Liu <david-khala@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "workspace" }, { include = "lineage" }]


[tool.poetry.dependencies]
python = "^3.13"
databricks-sdk = "*"
davidkhala-utils = "0.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "*"
databricks-connect = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
