[tool.poetry]
name = "davidkhala.databricks"
version = "0.0.0"
description = ""
authors = ["David Liu <david-khala@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "workspace" }, { include = "lineage" }, { include = "common" }]


[tool.poetry.dependencies]
python = "^3.12"
databricks-sdk = "*"
davidkhala-utils = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
databricks-connect = "*"

[tool.poetry.scripts]
test = "pytest:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
