[project]
name = "davidkhala.databricks"
version = "0.1.3"
description = ""
authors = [{ name = "David Liu", email = "david-khala@hotmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "databricks-sdk",
    "davidkhala-utils",
]

[project.optional-dependencies]
connect = [
    "databricks-connect<18",
    "davidkhala-spark",
]
gcp = [
    "davidkhala-gcp",
    "davidkhala-gcp-pubsub",
]
mcp = [
    "mcp>=1.9","mlflow>=3.1.0",
    "databricks-sdk[openai]","databricks-agents>=1.0.0","databricks-mcp"
]

[project.scripts]
test = "pytest:main"

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
